[SIX-153][SIX-124] Fixed icons share on small screens and block section blog

--- a/wp-content/themes/sixgill/css/custom_2016.css
+++ b/wp-content/themes/sixgill/css/custom_2016.css
@@ -54,7 +54,7 @@ all classes apply for desktop
 
 
 .my_containerSolution {
-	max-width:950px;
+	max-width:930px;
 	padding-top:75px;
 	margin-top:0px;
 	margin-bottom:0px;
@@ -228,7 +228,7 @@ all classes apply for desktop
 	}
 
 	.marginShareButton {
-		margin-left: 80px;
+		margin-left: 40px;
 		list-style-type: none;
 	}
 
@@ -535,8 +535,8 @@ all classes apply for desktop
 	.subscribe-success-icon {
 		margin-top: 0px;
 	}
-
-    .my_containerSolution {
+    
+    .my_containerSolution_indent {
         margin-right: 50px;
         margin-left: 80px;
     }
@@ -729,10 +729,6 @@ all classes apply for desktop
 		display: block;
 	}
 
-    .my_containerSolution {
-        margin-right: 15px;
-        margin-left: 15px;
-    }
 
 	#header {
 		position: fixed;
@@ -753,5 +749,10 @@ all classes apply for desktop
 	#primary-menu {
 		text-align: center;
 	}
+    
+    .my_containerSolution_indent {
+            margin-left: 15px;
+            margin-right: 15px;
+    }
 
 }
