--- a/wp-content/themes/sixgill/css/responsive.css
+++ b/wp-content/themes/sixgill/css/responsive.css
@@ -10,6 +10,10 @@
 
 @media (max-width: 1199px) {
 
+    .my_containerSolution_indent {
+            margin-left: 8%;
+            margin-right: 8%;
+    }
 
 
 	canvas {
